2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement flow control for http.

	* grub-core/net/http.c (parse_line): Handle response 206.
	(http_receive): Stall if too many packets are in the queue.
	(http_establish): Fix range header.
	(http_seek): Fix double free.
	(http_close): Likewise.
	(http_packets_pulled): New function.
	(grub_http_protocol): Set http_seek
	* grub-core/net/tcp.c (grub_net_tcp_socket): New field `i_stall'.
	(ack_real): Set window depending on i_stall.
	(grub_net_send_tcp_packet): Likewise.
	(grub_net_tcp_stall): New function.
	(grub_net_tcp_unstall): Likewise.
	* include/grub/net/tcp.h (grub_net_tcp_stall): New proto.
	(grub_net_tcp_unstall): Likewise.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/tftp.c: Decrease stall to 50 packets.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (grub_net_fs_open): Free resources on failed open.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Fix a typo.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement flow control for tftp.

	* grub-core/net/net.c (receive_packets): Decrease the stop to 10
	packets but stop only if stop condition is satisfied.
	(grub_net_fs_read_real): Call packets_pulled after real read. Use
	`stall' instead of `eof' as stop condition.
	* grub-core/net/http.c (parse_line): Set `stall' on EOF.
	(http_err): Likewise.
	* grub-core/net/tftp.c (ack): Replace the first argument with data
	instead of socket.
	(tftp_receive): Stall if too many packets are in wait queue.
	(tftp_packets_pulled): New function.
	(grub_tftp_protocol): Set packets_pulled.
	* include/grub/net.h (grub_net_packets): New field count.
	(grub_net_put_packet): Increment count.
	(grub_net_remove_packet): Likewise.
	(grub_net_app_protocol): New field `packets_pulled'.
	(grub_net): New field `stall'.

2012-06-22  Vladimir Serbinenko  <phcoder@gmail.com>
