@@ -651,7 +651,21 @@ grub_find_root_devices_from_mountinfo (const char *dir, char **relroot)
 	{
 	  ret = grub_find_root_devices_from_btrfs (dir);
 	  if (relroot)
-	    *relroot = strdup (entries[i].enc_root);
+	    {
+	      char *ptr;
+	      *relroot = xmalloc (strlen (entries[i].enc_root) +
+				  2 + strlen (dir));
+	      ptr = stpcpy (*relroot, entries[i].enc_root);
+	      if (strlen (dir) > strlen (entries[i].enc_path))
+		{
+		  while (ptr > *relroot && *(ptr - 1) == '/')
+		    ptr--;
+		  if (dir[strlen (entries[i].enc_path)] != '/')
+		    *ptr++ = '/';
+		  ptr = stpcpy (ptr, dir + strlen (entries[i].enc_path));
+		}
+	      *ptr = 0;
+	    }
 	}
       if (!ret)
 	{
